[project]
name = "soma-init-repo-check"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "requests>=2.32.5",
    "requests-cache>=1.3.0",
    "sexpdata>=1.0.2",
    "tenacity>=9.1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.mypy]
strict = true
mypy_path = "stubs"
